basic server setup

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A social media site, like that other one but with less features Built with the MERN stack, this is a full stack app with user authentication that allows users to express themselves in 140 chracters or less",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "client": "nodemon server.js"
   },
   "repository": {
     "type": "git",
