--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "client": "nodemon server.js"
+    "server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
