--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:5000",
   "devDependencies": {
     "eslint": "^6.2.1",
     "eslint-config-airbnb": "^18.0.1",
