change node package

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "140CharactersOfAwesome",
   "version": "1.0.0",
   "description": "A social media site, like that other one but with less features Built with the MERN stack, this is a full stack app with user authentication that allows users to express themselves in 140 chracters or less",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
